--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container mx-auto bg-sky-200">
       <div class="flex flex-col items-center">
-        <div class="text-3xl font-bold">Mobile Legends: Bang Bang TestOne</div>
+        <div class="text-3xl font-bold">Mobile Legends: Bang Bang</div>
         <img
           class="rounded m-4"
           src="https://images.prismic.io/rivalryglhf/d237fa58-1ba7-4ff8-987e-718f8ec35420_puk.jpg?auto=compress,format&amp;rect=0,16,1430,715&amp;w=720&amp;h=360"
