--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="flex flex-col">
-        <h2 class="text-center font-bold text-xl">Characters</h2>
+        <h2 class="text-center font-bold text-xl">Our table</h2>
         <div class="flex flex-col lg:flex-row items-center justify-around">
           <div
             class="flex px-2 bg-indigo-200 w-64 h-80 lg:w-52 lg:h-70 rounded-md flex-col justify-around"
